--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DB_HOST=localhost
+DB_HOST=graphql-cluster.yoqsz5r.mongodb.net
 DB_PORT=27017
 DB_DATABASE=files_manager
-PORT=5000
+DB_USER=michaelmoser
+DB_PASSWORD=<password>
+DB_URI=mongodb+srv://michaelmoser:<password>@graphql-cluster.yoqsz5r.mongodb.net/?retryWrites=true&w=majority&appName=GraphQL-Cluster
