pushing changes to database connect

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_HOST=graphql-cluster.yoqsz5r.mongodb.net
 DB_PORT=27017
 DB_DATABASE=files_manager
 DB_USER=michaelmoser
-DB_PASSWORD=<password>
-DB_URI=mongodb+srv://michaelmoser:<password>@graphql-cluster.yoqsz5r.mongodb.net/?retryWrites=true&w=majority&appName=GraphQL-Cluster
+DB_PASSWORD=mSSsB2RFPxQqDCDc
+DB_URI=mongodb+srv://michaelmoser:mSSsB2RFPxQqDCDc@graphql-cluster.yoqsz5r.mongodb.net/?retryWrites=true&w=majority&appName=GraphQL-Cluster
