updating for puzzle to work on controllers

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_HOST=graphql-cluster.yoqsz5r.mongodb.net
 DB_PORT=27017
+PORT=5000
 DB_DATABASE=files_manager
 DB_USER=michaelmoser
 DB_PASSWORD=mSSsB2RFPxQqDCDc
