--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "chai-http": "^4.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "image-thumbnail": "^1.0.10",
     "js-sha1": "^0.7.0",
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
+    "path": "^0.12.7",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
     "uuid": "^8.3.2"
